# ts-llm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  DEV_ROUTE_1.md  LICENSE  PHASE_3_SPEC.md  PLAN.md  README.md  data_loader.py  eval_harness.py  main.py  model.py  model_deq.py  package.json  pyproject.toml  pytest.ini  requirements-wikitext.txt  requirements.txt  run_attractor_llm.py  state_analysis.py  tokenizer.py  train.py  utils.py
.github/workflows/: ci.yml
attractor_llm/: __init__.py  core.py  datasets.py  embeddings.py  hierarchy.py  model.py  tokenizer.py  torch_core.py  torch_model.py  training.py  training.py.save
attractor_llm/phase3/: __init__.py  adapter.py  config.py  (+5 more)
configs/: attractor_10m.yaml  attractor_200m.yaml  attractor_50m.yaml
data/: eval_prompts_50.json  prompts.json  train.txt  training.json
docs/: CHANGELOG.md  attractor-substrate.md  core_math.md  preprint.md  verified_run.md
notebooks/: demo.ipynb
plots/: limit_cycle_orbit.html
scripts/: adversarial_stress_stub.py  benchmark_table.py  capacity_study.py  cuda_euler_stub.py  eval_harness.py  eval_orbits.py  gen_toy_checkpoints.py  gen_trajectory_gifs.py  generate_training_corpus.py  human_eval_prep.py  plot_limit_cycle_orbit.py  prepare_tinystories_tokenized.py  probe_attractors.py  push_safe.sh  qualitative_coherence_numpy.py  reproduce_sandbox.py  scaling_1b_stub.py  train_attractor.py  transformer_baseline_stub.py  tsos_episode_sim.py  validate_attractor_targets.py
tests/: conftest.py  test_ablation_stub.py  test_capacity_study.py  test_checkpoint_roundtrip.py  test_deq.py  test_dynamics_step_equivalence.py  test_eval_harness.py  test_heavy_stress.py  test_hierarchical_mode.py  test_model.py  test_numpy_demo.py  test_phase3_integration.py  test_regression.py  test_short_corpus_safety.py  test_state_analysis.py  test_tokenizer_consistency.py  test_train_utils.py
ts_attractor/: README.md  __init__.py  controller.py  dynamics.py  numpy_demo.py  proto_attractors.py  training_loop.py  tsos_bridge.py
(+30 files in other folders)
